Directions text added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<header id="header" style="margin: 0 20%; text-align: center;">
 		<h1>ASL Field Guide</h1>
 		<p>Identify ASL signs by sight and movement</p>
+		<p>Instructions: Click the <img src="https://rossolson.github.io/asl-to-english/tablefilter/style/themes/icn_filter.gif" title="filter"> icons to choose a motion or position.</p>
 	</header>
 
 	<table id="demo" class="signs-tiny" style="margin: auto;">
